2010-07-22  Alan McGovern  <amcgovern@novell.com>

	* eventargs.h: Always clone the Value* inside of
	  PropertyChangedEventArgs in case we want to emit a change
	  notification asynchronously. Previously if this was done,
	  old_value and new_value would point to freed memory.

2010-07-21  Alan McGovern  <amcgovern@novell.com>

	* runtime.cpp:
	* control.cpp:
	* deployment.h:
	* uielement.cpp:
	* deployment.cpp: Add a second method to emit loaded events
	  which does it synchronously. This is required for flushing
	  loaded events from the splash screen as if we do it
	  asynchronously, the events might not actually be able to
	  emit anymore if we set cross_domain_app to true in the
	  meantime. Change existing calls to EmitLoaded to use
	  EmitLoadedAsync.

2010-07-21  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* deployment.cpp: Correctly pass bool arguments to mono_runtime_invoke.

2010-07-21  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* security.h: Set correct object type in ctor.

2010-07-21  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* utils.h:
	* utils.cpp:
	* deployment.h:
	* deployment.cpp:
	* application.cpp: Move CanonicalizeFileName to managed code, so that we have
	only 1 canonicalization implementation. Partly fixes the #GB18030* tests.

2010-07-21  Alan McGovern  <amcgovern@novell.com>

	* frameworkelement.h:
	* frameworkelement.cpp: Add a destroyed listener to
	  FrameworkElement::LogicalParent so we don't end up with
	  dangling pointers if the parent is collected˙

2010-07-20  Jeffrey Stedfast  <fejj@novell.com>

	* multiscaleimage.cpp (OnPropertyChanged): Need to update
	InternalViewport properties afterall. Re-fixes drts 291 and 509.

2010-07-20  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* dirty.cpp: UpdateLayout: don't cache the # of layers, it may change while
	looping over them. Fixes a crash with #869.

2010-07-20  Jeffrey Stedfast  <fejj@novell.com>

	* multiscaleimage.cpp (OnPropertyChanged): Since setting