@@ -664,6 +664,9 @@ protected:
 	static void CallPreRender (List *ctx, UIElement *element, Region *region, bool skip_children);
 	static void CallPostRender (List *ctx, UIElement *element, Region *region, bool skip_children);
 
+	// Local perspective transform, including local affine transforms
+	double local_projection[16];
+
 	// Absolute perspective transform, precomputed with all of its data
 	double absolute_projection[16];
 
