@@ -1,3 +1,9 @@
+2010-07-22  David Reveman  <davidr@novell.com>
+
+	* uielement.h:
+	* uielement.cpp: Add local_projection for transforming local
+	coordinates to parent coordinate space.
+
 2010-07-22  Alan McGovern  <amcgovern@novell.com>
 
 	* eventargs.h: Always clone the Value* inside of
